Fixed ad gray background not showing fullwidth

--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -13166,7 +13166,7 @@ body.single-post,
 				content:"";
 				display: block;
 				background: #f1f1f1;
-				width: 100%;
+				width: 100vw;
 				height: 100%;
 				position: absolute;
 				top: 0;
